force-app/main/default/objects/QuotePricingRuleSetting__mdt/QuotePricingRuleSetting__mdt.object-meta.xml
<CustomObject>
    <label>QuotePricingRuleSetting</label>
    <pluralLabel>QuotePricingRuleSettings</pluralLabel>
</CustomObject>