force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/ComponentTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ComponentTypeCode__c</fullName>
    <description>Contains Product code returned from JSON, and will be used as a key in the map.</description>
    <label>ComponentTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>