force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/ComponentTypeName__c.field-meta.xml
<CustomField>
    <fullName>ComponentTypeName__c</fullName>
    <description>ComponentTypeName	Contain Product name returned from JSON, will be used for comparing.</description>
    <label>ComponentTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>