force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost	Has cost of the and will be used as % value of total cost if Valuetype is ‘Pecent’,</description>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>