force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/IsAutoCreate__c.field-meta.xml
<CustomField>
    <fullName>IsAutoCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsAutoCreate	If this flag is true then Create Quote Line even if Quote Option line do not exists.</description>
    <label>IsAutoCreate</label>
    <type>Checkbox</type>
</CustomField>