force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Has ListPrice and will be updated if ListPrice if Value type is not Percent.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>