force-app/main/default/objects/QuotePricingRuleSetting__mdt/fields/ValueType__c.field-meta.xml
<CustomField>
    <fullName>ValueType__c</fullName>
    <description>If Value type is percent then take as % value.</description>
    <label>ValueType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>